# gcode-nom

./: .gitignore  Cargo.toml  README.md  TODO.md  go.sh  rustfmt.toml
.github/workflows/: rust.yml
assets/: II 2x4_0.15mm_PLA_MK3S_1h17m.gcode  T 2x3_0.15mm_PLA_MK3S_1h3m.gcode  arc_demo.gcode  benchy2-mk4s.bgcode  both parts.bgcode  both.gcode  g2_box_nibble_clockwise.gcode  g3_box_rounded_anticlockwise.gcode  round_box.gcode  round_box_anticlockwise.gcode  source.md
bgcodeViewer/: .markdownlint.yaml  Cargo.toml  a.txt  e.txt  go.sh  thumb.qoi
bgcodeViewer/src/: main.rs
blender/: AOTest.blend  Benchy.blend1  CyclesStage_1m.blend  CyclesStage_1m.blend1  Stage.blend1  book_pattern_4k.blend
extract_thumbs/: .gitignore  Cargo.toml  go.sh  summary.txt  thumb_16x160.oci  thumb_220x1240.oci
extract_thumbs/src/: main.rs
gcode2obj/: AOTest.blend1  Benchy.blend  Cargo.toml  README.md  Stage.blend  go.sh  plasticMaterial.blend  sample.sh  small.gcode
gcode2obj/src/: main.rs  obj.rs
gcode2svg/: Cargo.toml  README.md  dhat-heap.json  dhat.sh  go.sh  perf.data  perf.data.old  sample.sh
gcode2svg/assets/: 3DBenchy.gcode
gcode2svg/src/: main.rs  svg.rs
gcode2svg/src/snapshots/: gcode2svg__svg__arc_anti_clockwise.snap  gcode2svg__svg__arc_clockwise.snap  gcode2svg__test__svg_anti_clockwise_arc.snap  gcode2svg__test__svg_clockwise_arc.snap
lib/: Cargo.toml
lib/src/: arc.rs  arc_params.rs  command.rs  double.rs  lib.rs  params.rs  parms.rs  pos.rs
lib/src/binary/: block_header.rs  compression_type.rs  default_params.rs  fh.rs  fm.rs  gcode.rs  inflate.rs  mod.rs  pm.rs  sm.rs  thumb.rs
lib/src/binary/fh/: checksum_type.rs  mod.rs  preamble.rs  version.rs
lib/src/binary/file_handler/: checksum_type.rs  mod.rs  preamble.rs  version.rs
lib/src/binary/file_metadata_block/: mod.rs  param.rs
lib/src/binary/fm/: data_block.rs  db.rs  mod.rs  param.rs
lib/src/binary/gcode_block/: extractor.rs  mod.rs  param.rs  svg.rs
lib/src/binary/gcode_block/snapshots/: gcode_nom__binary__gcode_block__svg__svg__arc_anti_clockwise.snap  gcode_nom__binary__gcode_block__svg__svg__arc_clockwise.snap  gcode_nom__binary__gcode_block__svg__svg__arc_demo.snap  gcode_nom__binary__gcode_block__svg__svg__zero_crossing.snap
lib/src/binary/print_metadata_block/: mod.rs  param.rs
lib/src/binary/printer_metadata_block/: mod.rs  param.rs
lib/src/binary/slicer_block/: mod.rs  param.rs
lib/src/binary/thumbnail_block/: mod.rs  param.rs
lib/src/params/: head.rs  mod.rs  mp.rs
src/: command.rs  main.rs  pos.rs  sentence.rs  svg.rs
