
[workspace]
members = [
  "./lib",
  "./gcode2svg",
  "gcode2obj",
  "bgcodeViewer",
  "extract_thumbs",
]
resolver = "2"
default-members = ["./lib"]

[workspace.package]
authors = ["martin <martinfrances107@hotmail.com>"]
edition = "2021"
homepage = "https://github.com/martinfrances107/gcode-nom"
license = "MIT"
readme = "README.md"
repository = "https://github.com/martinfrances107/gcode-nom"
rust-version = "1.80"
version = "0.1.1"

[workspace.dependencies]
clap = { version = "4.5.29", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.25"
heatshrink = "0.2"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"

[profile.dev]
debug = true
