
[workspace]
members = [
  "./lib",
  "./gcode2svg",
  "gcode2obj",
  "bgcodeViewer",
  "extract_thumbs",
]
resolver = "2"
default-members = ["./lib"]

[workspace.package]
authors = ["martin <martinfrances107@hotmail.com>"]
edition = "2021"
homepage = "https://github.com/martinfrances107/gcode-nom"
license = "MIT"
readme = "README.md"
repository = "https://github.com/martinfrances107/gcode-nom"
rust-version = "1.80"
version = "0.5.1"

[workspace.dependencies]
clap = { version = "4.5.40", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.27"
heatshrink = "0.2"
nom = "8.0.0"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"

[profile.dev]
debug = true
