[package]
authors = { workspace = true }
edition = { workspace = true }
name = "bgcodeValidator"
categories = ["Parsing tools"]
description = "[Wavefront obj] Visualization tool for inspecting a g-code file."
homepage = { workspace = true }
keywords = ["visualization"]
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[[bin]]
name = "gcode2obj"
path = "src/main.rs"

[dependencies]
nom = { workspace = true }
gcode-nom = { path = "../lib" }
clap = { version = "4.5.20", features = ["derive"] }
log = { workspace = true }
env_logger = { workspace = true }
heatshrink = { workspace = true }
