[package]
name = "extract_thumbs"
authors = { workspace = true }
edition = { workspace = true }
categories = ["Parsing tools"]
description = "Extracts the thumbnails from a .gcode/.bgcode file."
homepage = { workspace = true }
keywords = ["visualization"]
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[dependencies]
clap = { workspace = true }
env_logger = { workspace = true }
gcode-nom = { path = "../lib" }
log = { workspace = true }
