[package]
authors = ["martin <martinfrances107@hotmail.com>"]
edition = "2021"
name = "gcode2obj"
categories = []
description = "[Wavefront obj] Visualization tool for inspecting a g-code file. "
homepage = "https://github.com/martinfrances107/gcode-nom"
keywords = ["visualization", "gcode", "parser-combinator"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/martinfrances107/gcode-nom"
rust-version = "1.80"
version = "0.1.1"

[[bin]]
name = "gcode2obj"
path = "src/main.rs"

[dependencies]
gcode-nom = { version = "0.1.1" }
clap = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
