[package]
authors = { workspace = true }
edition = { workspace = true }
name = "gcode2obj"
categories = []
description = "[Wavefront obj] Visualization tool for inspecting a g-code file. "
homepage = "https://github.com/martinfrances107/gcode-nom"
keywords = ["visualization", "gcode", "parser-combinator"]
license = "MIT"
readme = "README.md"
repository = { workspace = true }
rust-version = { workspace = true }
version = "0.6.1"

[[bin]]
name = "gcode2obj"
path = "src/main.rs"

[dependencies]
gcode-nom = "0.6.2"
clap = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
hashbrown = "0.15.2"
