[package]
authors = ["martin <martinfrances107@hotmail.com>"]
edition = "2021"
name = "gcode2svg"
categories = ["Parsing tools"]
description = "Visualization tool for inspecting a g-code file."
homepage = "https://github.com/martinfrances107/gcode-nom"
keywords = ["visualization"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/martinfrances107/gcode-nom"
rust-version = "1.80"
version = "0.1.0"

[[bin]]
name = "gcode2svg"
path = "src/main.rs"

[dependencies]
env_logger.workspace = true
gcode-nom = { path = "../lib" }
log = { workspace = true }
