[package]
authors = { workspace = true }
edition = { workspace = true }
name = "gcode2svg"
categories = ["Parsing tools"]
description = "Visualization tool for inspecting a g-code file."
homepage = "https://github.com/martinfrances107/gcode-nom"
keywords = ["visualization"]
license = "MIT"
readme = "README.md"
repository = { workspace = true }
rust-version = { workspace = true }

[[bin]]
name = "gcode2svg"
path = "src/main.rs"

[dependencies]
gcode-nom = { path = "../lib" }
clap = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
