[package]
authors = ["martin <martinfrances107@hotmail.com>"]
edition = "2021"
name = "gcode-nom"
categories = ["Parsing tools"]
description = "Visualization tool for inspecting a g-code file."
homepage = "https://github.com/martinfrances107/gcode-nom"
keywords = ["visualization", "parser-combinator"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/martinfrances107/gcode-nom"
rust-version = "1.80"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
crc32fast = "1.4.2"
inflate = "0.4"
heatshrink = "0.2.0"
nom = "7.1.3"
log = { workspace = true }
