[package]
authors = ["martin <martinfrances107@hotmail.com>"]
edition = "2021"
name = "gcode-nom"
categories = []
description = "Visualization tool for inspecting a g-code file."
homepage = "https://github.com/martinfrances107/gcode-nom"
keywords = ["visualization", "parser-combinator"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/martinfrances107/gcode-nom"
rust-version = "1.80"
version = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nom = { workspace = true }
crc32fast = "1.4.2"
inflate = "0.4.5"
heatshrink = "0.2.0"
log = { workspace = true }
meatpack = "0.0.3"

[dev-dependencies]
insta = "1.43.1"
