[package]
authors = { workspace = true }
edition = { workspace = true }
name = "gcode-nom"
categories = []
description = "Visualization tool for inspecting a g-code file."
homepage = "https://github.com/martinfrances107/gcode-nom"
keywords = ["visualization", "parser-combinator"]
license = { workspace = true }
readme = "../README.md"
repository = { workspace = true }
rust-version = { workspace = true }
version = "0.6.2"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nom = { workspace = true }
crc32fast = "1.4.2"
inflate = "0.4.5"
heatshrink = "0.2.0"
log = { workspace = true }
meatpack = "0.0.3"

[dev-dependencies]
insta = "1.43.1"
